# mqt-qmap

./: .cirrus.yml  .clang-format  .clang-tidy  .codecov.yml  .flake8  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  MANIFEST.in  README.md  UPGRADING.md  noxfile.py  out.qasm  pyproject.toml  qelib1.inc  setup.py  test_architecture.arch  test_calibration.cal
apps/: CMakeLists.txt  cliffordsynthesis_app.cpp  exact_app.cpp  heuristic_app.cpp
bindings/: CMakeLists.txt  bindings.cpp
bindings/clifford_synthesis/: CMakeLists.txt  clifford_synthesis.cpp
bindings/hybrid_mapper/: CMakeLists.txt  hybrid_mapper.cpp
bindings/na/: CMakeLists.txt
bindings/na/nasp/: CMakeLists.txt  nasp.cpp
bindings/na/zoned/: CMakeLists.txt  zoned.cpp
bindings/sc/: CMakeLists.txt  sc.cpp
jkq/qmap/: CMakeLists.txt  __init__.py  bindings.cpp  compile.py
mqt/qmap/: CMakeLists.txt  __init__.py  bindings.cpp  clifford_synthesis.py  compile.py  load_architecture.py  load_calibration.py  pyqmap.pyi  subarchitectures.py  subgraphs.py
mqt/qmap/layout/: subarchitectures.py
mqt/qmap/libs/: ibm_guadalupe_16.pickle  rigetti_16.pickle
mqt/qmap/qiskit/: backend.py
src/: Architecture.cpp  CMakeLists.txt  DataLogger.cpp  Encodings.cpp  LBEncodings.cpp  Mapper.cpp  Synthesizer.cpp  Tableau.cpp  main.cpp  utils.cpp
src/cliffordsynthesis/: CMakeLists.txt  CliffordSynthesizer.cpp  DepthSynthesizer.cpp  ExactStrategy.cpp  FidelitySynthesizer.cpp  GateEncoding.cpp  GateSynthesizer.cpp  HeuristicStrategy.cpp  Results.cpp  SATEncoder.cpp  Tableau.cpp  TargetMetric.cpp  TargetMetricHandler.cpp  Utils.cpp  cliffordsynthesis.cpp
src/cliffordsynthesis/encoding/: GateEncoder.cpp  MultiGateEncoder.cpp  ObjectiveEncoder.cpp  PhaseCorrectionEncoder.cpp  SATEncoder.cpp  STQGatesEncoder.cpp  SingleGateEncoder.cpp  TableauEncoder.cpp  TwoQubitEncoder.cpp
src/configuration/: Configuration.cpp
src/depthsynthesis/: DepthSynthesizer.cpp
src/encodings/: Encodings.cpp
src/exact/: ExactMapper.cpp  circuit.cpp  exact_mapping.cpp
src/fidelitysynthesis/: FidelitySynthesizer.cpp  Fidelitysynthesizer.cpp
src/gatesynthesis/: GateSynthesizer.cpp
src/heuristic/: HeuristicMapper.cpp  architecture_handling.cpp  circuit_property_handling.cpp  cost.cpp  layer_handling.cpp  mapping.cpp  node_handling.cpp  util.cpp
src/hybridmap/: AodScheduler.cpp  CMakeLists.txt  HardwareQubits.cpp  HybridAnimation.cpp  HybridNeutralAtomMapper.cpp  HybridSynthesisMapper.cpp  Mapping.cpp  MoveToAodConverter.cpp  NeutralAtomArchitecture.cpp  NeutralAtomLayer.cpp  NeutralAtomMappingResults.cpp  NeutralAtomScheduler.cpp  NeutralAtomUtils.cpp
src/logicblocks/: CMakeLists.txt  Encodings.cpp  LogicBlock.cpp  LogicTerm.cpp  Z3Logic.cpp  Z3Model.cpp
src/mqt/qmap/: __init__.py  clifford_synthesis.py  compile.py  load_architecture.py  load_calibration.py  pyqmap.pyi  subarchitectures.py
src/na/: Architecture.cpp  CMakeLists.txt  Configuration.cpp  Layer.cpp  NAGraphAlgorithms.cpp  NAMapper.cpp  NeutralAtomMapper.cpp
src/na/azac/: ASAPScheduler.cpp  AStarPlacer.cpp  Architecture.cpp  BMReuseAnalyzer.cpp  CMakeLists.txt  CodeGenerator.cpp  Compiler.cpp  CompilerBase.cpp  ISRouter.cpp  NoReuseAnalyzer.cpp  Placer.cpp  ReuseAnalyzer.cpp  Router.cpp  Scheduler.cpp  Utils.cpp  VMPlacer.cpp  VMReuseAnalyzer.cpp
src/na/defa/: CMakeLists.txt  DLEBMF.cpp
src/na/nalac/: CMakeLists.txt  NAGraphAlgorithms.cpp  NAMapper.cpp
src/na/nasp/: CMakeLists.txt  CodeGenerator.cpp  Optimizer.cpp  Solver.cpp  SolverFactory.cpp
src/na/zonar/: AStarSearch.cpp  CMakeLists.txt  DLEBMF.cpp
src/na/zoned/: ASAPScheduler.cpp  AStarPlacer.cpp  Architecture.cpp  CMakeLists.txt  CodeGenerator.cpp  ISRouter.cpp  IndependentSetRouter.cpp  VMPlacer.cpp  VMReuseAnalyzer.cpp  VertexMatchingPlacer.cpp  VertexMatchingReuseAnalyzer.cpp
src/python/: CMakeLists.txt  bindings.cpp  module.cpp
src/python/visualization/: __init__.py  visualize_search_graph.py
src/qasm_parser/: parser.cpp  scanner.cpp  token.cpp
src/sc/: Architecture.cpp  CMakeLists.txt  Configuration.cpp  DataLogger.cpp  Mapper.cpp  utils.cpp
src/sc/exact/: CMakeLists.txt  ExactMapper.cpp
src/sc/heuristic/: CMakeLists.txt  HeuristicMapper.cpp
test/: CMakeLists.txt  benchmark.py  test_architecture.cpp  test_cliffordsynthesis.cpp  test_encodings.cpp  test_exact.cpp  test_general.cpp  test_heuristic.cpp  test_logicblocks.cpp  test_tableau.cpp
test/benchmarks/: exact_mapping_results.csv  heuristic_mapping_results.csv
test/cliffordsynthesis/: CMakeLists.txt  circuits.json  tableaus.json  test_circuit_optimization.cpp  test_synthesis.cpp  test_tableau.cpp  test_tableau_synthesis.cpp
test/hybridmap/: CMakeLists.txt  main.cpp  test_hybrid_synthesis_map.cpp  test_hybridmap.cpp
test/hybridmap/architectures/: rubidium.json  rubidium_hybrid.json  rubidium_shuttling.json
test/hybridmap/circuits/: dj_nativegates_rigetti_qiskit_opt3_10.qasm  dj_nativegates_rigetti_qiskit_opt3_10.qasm_aod  dj_nativegates_rigetti_qiskit_opt3_10.qasm_ext  dj_nativegates_rigetti_qiskit_opt3_10.qasm_results  modulo_2.qasm  multiply_2.qasm  qft_nativegates_rigetti_qiskit_opt3_10.qasm  random_nativegates_rigetti_qiskit_opt3_10.qasm
test/logicblocks/: CMakeLists.txt  test_logicblocks.cpp
test/na/: CMakeLists.txt  test_architecture.cpp  test_configuration.cpp  test_exe.cpp  test_graph.cpp  test_layer.cpp  test_nagraphalgorithms.cpp  test_namapper.cpp  test_neutralatommapper.cpp
test/na/azac/: CMakeLists.txt  test_a_star_placer.cpp  test_architecture.cpp  test_asap_scheduler.cpp  test_code_generator.cpp  test_compiler.cpp  test_is_router.cpp  (+3 more)
test/python/: constraints.txt  test.py  test_cliffordsynthesis.py  test_compile.py  test_exact_mapper.py  test_heuristic_mapper.py  test_hybrid_synthesis.py  test_hybridmap.py  test_qiskit_backend_imports.py  test_subarchitectures.py
test/sc/: CMakeLists.txt  test_architecture.cpp  test_general.cpp
test/subgraphs/: ibmq_ehningen.txt
(+759 files in other folders)
