[build-system]
requires = [
  "scikit-build-core>=0.11.0",
  "setuptools-scm>=8.2",
  "pybind11>=2.13.6",
  "mqt.core>=3.0.0rc2",
]
build-backend = "scikit_build_core.build"

[project]
name = "mqt.qmap"
description = "A tool for Quantum Circuit Mapping"
readme = "README.md"
authors = [
    { name = "Lukas Burgholzer", email = "lukas.burgholzer@tum.de" },
    { name = "Stefan Hillmich", email = "stefan.hillmich@scch.at" },
    { name = "Tom Peham", email = "tom.peham@tum.de" },
    { name = "Ludwig Schmid", email = "ludwig.s.schmid@tum.de" },
    { name = "Yannick Stade", email = "yannick.stade@tum.de" }
]
keywords = ["MQT", "quantum-computing", "design-automation", "compiler", "clifford-synthesis"]
license = "MIT"
license-files = ["LICENSE.md"]

classifiers = [
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "mqt.core>=3.0.0rc2",
    "qiskit[qasm3-import]>=1.0.0",
    "rustworkx[all]>=0.16.0",
    "importlib_resources>=5.0; python_version < '3.10'",
    "typing_extensions>=4.6; python_version < '3.10'",
]
dynamic = ["version"]

[project.optional-dependencies]
visualization = [
    "distinctipy>=1.3.4",
    "plotly>=6.0.0",
    "networkx>=3.2.1",
    "walkerlayout>=1.0.2",
    "ipywidgets>=8.1.5",
]

[project.urls]
Homepage = "https://github.com/cda-tum/mqt-qmap"
Documentation = "https://mqt.readthedocs.io/projects/qmap"
Issues = "https://github.com/cda-tum/mqt-qmap/issues"
Discussions = "https://github.com/cda-tum/mqt-qmap/discussions"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Set the wheel install directory
wheel.install-dir = "mqt/qmap"

# Explicitly set the package directory
wheel.packages = ["src/mqt"]

# Set required Ninja version
ninja.version = ">=1.10"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}/{build_type}"

# Only build the Python bindings target
build.targets = ["pyqmap"]

# Only install the Python package component
install.components = ["mqt-qmap_Python"]

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/mqt/qmap/_version.py"]
sdist.exclude = [
    "**/.github",
    "**/doc",
    "**/docs",
    "**/meta",
    "**/plots",
    "**/test",
    "**/tests",
]

[tool.scikit-build.cmake.define]
BUILD_MQT_QMAP_TESTS = "OFF"
BUILD_MQT_QMAP_BINDINGS = "ON"
ENABLE_IPO = "ON"

[[tool.scikit-build.overrides]]
if.python-version = ">=3.13"
if.abi-flags = "t"
if.platform-system = "win32"
inherit.cmake.define = "append"
cmake.define.DISABLE_GIL = "1"


[tool.check-sdist]
sdist-only = ["src/mqt/qmap/_version.py"]
git-only = [
    "docs/*",
    "extern/*",
    "test/*",
    ".idea/*",
]


[tool.setuptools_scm]
write_to = "src/mqt/qmap/_version.py"


[tool.pytest.ini_options]
minversion = "7.2"
testpaths = ["test/python"]
addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals"]
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = [
  "error",
  'ignore:.*datetime\.datetime\.utcfromtimestamp.*:DeprecationWarning:',
  # we purposely maintain compatibility with the V1 backends until Qiskit removes them in 2.0
  'ignore:.*qiskit\.providers\.models.* is deprecated.*:DeprecationWarning:mqt.qmap.*',
  'ignore:.*qiskit\.providers\.fake_provider\.fake_backend\.FakeBackend.* is deprecated.*:DeprecationWarning:',
  'ignore:.*qiskit\.providers\.backend.BackendV1.* is deprecated.*:DeprecationWarning:',
  'ignore:.*qiskit\.providers\.backend_compat.BackendV2Converter.* is deprecated.*:DeprecationWarning:',
  # Qiskit 1.2 deprecations (to be removed with Qiskit 2.0)
  'ignore:.*qiskit\.providers\.models.* is deprecated.*:DeprecationWarning:qiskit.*',
  # Qiskit 1.3 deprecations (to be removed with Qiskit 2.0)
  'ignore:.*``qiskit.dagcircuit.dagcircuit.DAGCircuit.*`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
  'ignore:.*``qiskit.circuit.instruction.Instruction.condition`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
  'ignore:.*``qiskit.circuit.library.standard_gates.x.*`` is pending deprecation as of qiskit 1.3.*:PendingDeprecationWarning:',
]

[tool.coverage]
run.source = ["mqt.qmap"]
run.omit = [
  "*/visualization/*",
  "*/_compat/*",
]
report.exclude_also = [
    '\.\.\.',
    'if TYPE_CHECKING:',
    'raise AssertionError',
    'raise NotImplementedError',
    'def __dir__()',  # Ignore __dir__ method that exists mainly for better IDE support
    '@overload'  # Overloads are only for static typing
]

[tool.mypy]
files = ["src/mqt", "test/python", "noxfile.py"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/src"]
python_version = "3.9"
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
explicit_package_bases = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["qiskit.*", "matplotlib.*", "networkx.*", "plotly.*", "_plotly_utils.*", "distinctipy.*", "ipywidgets.*", "walkerlayout.*"]
ignore_missing_imports = true


[tool.check-wheel-contents]
ignore = ["W002"]  # Triggers on __init__.py's


[tool.ruff]
line-length = 120
namespace-packages = ["mqt"]
preview = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = [
    "A",           # flake8-builtins
    "ANN",         # flake8-annotations
    "ARG",         # flake8-unused-arguments
    "ASYNC",       # flake8-async
    "B",  "B904",  # flake8-bugbear
    "C4",          # flake8-comprehensions
    "D",           # pydocstyle
    "EM",          # flake8-errmsg
    "EXE",         # flake8-executable
    "FA",          # flake8-future-annotations
    "FLY",         # flynt
    "FURB",        # refurb
    "I",           # isort
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "LOG",         # flake8-logging-format
    "N",           # flake8-naming
    "NPY",         # numpy
    "PERF",        # perflint
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "PYI",         # flake8-pyi
    "Q",           # flake8-quotes
    "RET",         # flake8-return
    "RSE",         # flake8-raise
    "RUF",         # Ruff-specific
    "S",           # flake8-bandit
    "SLF",         # flake8-self
    "SLOT",        # flake8-slots
    "SIM",         # flake8-simplify
    "T20",         # flake8-print
    "TC",          # flake8-type-checking
    "TID251",      # flake8-tidy-imports.banned-api
    "TRY",         # tryceratops
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
ignore = [
    "ISC001",  # Conflicts with formatter
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import should be at top of file
    "S101",    # Use of assert detected
    "S403",    # `pickle`, `cPickle`, `dill`, and `shelve` modules are possibly insecure
]
typing-modules = ["mqt.qmap._compat.typing"]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Callable".msg = "Use collections.abc.Callable instead."
"typing.Iterator".msg = "Use collections.abc.Iterator instead."
"typing.Mapping".msg = "Use collections.abc.Mapping instead."
"typing.Sequence".msg = "Use collections.abc.Sequence instead."
"typing.Set".msg = "Use collections.abc.Set instead."
"typing.Self".msg = "Use mqt.qmap._compat.typing.Self instead."
"typing_extensions.Self".msg = "Use mqt.qmap._compat.typing.Self instead."
"typing.TypeAlias".msg = "Use mqt.qmap._compat.typing.TypeAlias instead."
"typing_extensions.TypeAlias".msg = "Use mqt.qmap._compat.typing.TypeAlias instead."
"importlib.resources".msg = "Use mqt.qmap._compat.importlib.resources instead."
"importlib_resources".msg = "Use mqt.qmap._compat.importlib.resources instead."

[tool.ruff.lint.per-file-ignores]
"test/python/**" = ["T20", "ANN"]
"docs/**" = ["T20"]
"noxfile.py" = ["T20", "TID251"]
"*.pyi" = ["D418", "PYI021"]  # "*.pyi" = ["D418", "DOC202", "PYI011", "PYI021"]
"*.ipynb" = [
    "D",    # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]
"src/mqt/qmap/_compat/**.py" = ["TID251"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.typos]
files.extend-exclude = [
  "tableaus\\.json"
]
default.extend-ignore-re = [
  '"id": ".*",',
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",  # ignore line
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on" # ignore block
]
[tool.typos.default.extend-words]
wille = "wille"
anc = "anc"
optin = "optin"
aer = "aer"
iy = "iy"
ket = "ket"


[tool.repo-review]
ignore = ["GH200"]


[tool.cibuildwheel]
build = "cp3*"
skip = "*-musllinux*"
archs = "auto64"
test-groups = ["test"]
test-command = "pytest {project}/test/python"
test-skip = ["cp3*t-*"] # skip testing on free-threading Python until our dependencies are ready
build-frontend = "build[uv]"
enable = ["cpython-freethreading"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"

# The mqt-core shared libraries are provided by the mqt-core Python package.
# They should not be vendorized into the mqt-qcec wheel. This requires
# excluding the shared libraries from the repair process.

[tool.cibuildwheel.linux]
environment = { Z3_ROOT="/opt/python/cp311-cp311/lib/python3.11/site-packages/z3", DEPLOY="ON" }
before-all = "/opt/python/cp311-cp311/bin/pip install z3-solver==4.12.6"
repair-wheel-command = [
    "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/python/cp311-cp311/lib/python3.11/site-packages/z3/lib",
  """auditwheel repair -w {dest_dir} {wheel} \
--exclude libmqt-core-ir.so.3.0 \
--exclude libmqt-core-qasm.so.3.0 \
--exclude libmqt-core-circuit-optimizer.so.3.0 \
--exclude libmqt-core-ds.so.3.0 \
--exclude libmqt-core-na.so.3.0""",
]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies"

[tool.cibuildwheel.windows]
before-build = "uv pip install delvewheel>=1.9.0"
repair-wheel-command = """delvewheel repair -w {dest_dir} {wheel} --namespace-pkg mqt \
--exclude mqt-core-ir.dll \
--exclude mqt-core-qasm.dll \
--exclude mqt-core-circuit-optimizer.dll \
--exclude mqt-core-ds.dll \
--exclude mqt-core-na.dll"""
environment = { CMAKE_GENERATOR = "Ninja", UV_PRERELEASE = "allow" }


[tool.uv]
required-version = ">=0.5.20"
reinstall-package = ["mqt.qmap"]


[tool.uv.sources]
mqt-qmap = { workspace = true }

[dependency-groups]
build = [
  "pybind11>=2.13.6",
  "scikit-build-core>=0.11.0",
  "setuptools-scm>=8.2",
  "mqt.core>=3.0.0rc2",
]
docs = [
  "networkx>=3.2.1",
  "plotly>=6.0.0",
  "distinctipy>=1.3.4",
  "walkerlayout>=1.0.2",
  "ipywidgets>=8.1.5",
  "furo>=2024.8.6",
  "qiskit[qasm3-import,visualization]>=1.0.0",
  "setuptools-scm>=8.2",
  "sphinx-autoapi>=3.6.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinxcontrib-bibtex>=2.6.3",
  "sphinxcontrib-svg2pdfconverter>=1.3.0",
  "sphinxext-opengraph>=0.9.1",
  "myst-nb>=1.2.0",
  "sphinx>=7.4.7",
  "sphinx>=8.1.3; python_version >= '3.10'",
  "sphinx>=8.2.3; python_version >= '3.11'",
]
test = [
  "networkx>=3.2.1",
  "plotly>=6.0.0",
  "distinctipy>=1.3.4",
  "walkerlayout>=1.0.2",
  "ipywidgets>=8.1.5",
  "pytest>=8.3.5",
  "pytest-cov>=6",
  "mqt.qcec>=3.0.0b3",
]
dev = [
  {include-group = "build"},
  {include-group = "docs"},
  {include-group = "test"},
]
